--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
-    id 'com.google.devtools.ksp'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -26,11 +26,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         viewBinding true
@@ -50,13 +50,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
     //  Room
     implementation 'androidx.room:room-runtime:2.5.2'
-    ksp 'androidx.room:room-compiler:2.5.2'
+    kapt('androidx.room:room-compiler:2.5.2')
     // Room+paging
     implementation 'androidx.room:room-paging:2.5.2'
     //  Coroutines support for Room
     implementation 'androidx.room:room-ktx:2.5.2'
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.2.0'
+    // Hilt
+    implementation 'com.google.dagger:hilt-android:2.46.1'
+    kapt 'com.google.dagger:hilt-compiler:2.46.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
